--- a/includes/mastead.html
+++ b/includes/mastead.html
@@ -5,6 +5,9 @@
         <a href="www.mozilla.org" class="active">Mozilla</a>
         </li>
         <li>
+          <a href="http://womoz.mozillabrasil.org/">WoMoz</a>
+          </li>
+        <li>
           <a href="http://discourse.mozilla-community.org/">Discourse</a>
           </li>
             <li>
